RESOLVED FIXED115074
Default ParserError() initialiser doesn't initialise all fields
https://bugs.webkit.org/show_bug.cgi?id=115074
Summary Default ParserError() initialiser doesn't initialise all fields
Oliver Hunt
Reported 2013-04-23 18:14:11 PDT
Default ParserError() initialiser doesn't initialise all fields
Attachments
Patch (1.25 KB, patch)
2013-04-23 18:16 PDT, Oliver Hunt
joepeck: review+
Oliver Hunt
Comment 1 2013-04-23 18:16:41 PDT
Joseph Pecoraro
Comment 2 2013-04-23 18:17:52 PDT
Comment on attachment 199344 [details] Patch r=me
Oliver Hunt
Comment 3 2013-04-23 18:22:41 PDT
Note You need to log in before you can comment on or make changes to this bug.