Default ParserError() initialiser doesn't initialise all fields https://bugs.webkit.org/show_bug.cgi?id=115074

Reviewed by Joseph Pecoraro.

Only the jsc command prompt depended on this, but we'll fix it to
be on the safe side.

* parser/ParserError.h:
(JSC::ParserError::ParserError):

Canonical link: https://commits.webkit.org/133513@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149014 268f45cc-cd09-0410-ab3c-d52691b4dbfc